# pause-monitor

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  powermetrics-sample.plist  pyproject.toml
.serena/: project.yml
.serena/memories/: 00_start_here.md  agent-playbook-subagent-best-practices.md  agent-profile-session-home.md  alias-terms.md  architecture-process-tracker.md  architecture-project-structure.md  architecture-systems.md  architecture-tui-layout.md  architecture_postmortem.md  archive-memory-index.md  archive-start-here.md  audit-config-2026.md  audit-issue-finder-iss-002.md  audit-issue-finder-iss-008.md  audit-issue-finder-iss-009.md  audit-issue-finder-iss-014.md  audit-issue-finder-iss-015.md  audit-issue-finder-iss-016.md  audit-issue-finder-iss-017.md  audit-memory-conversion-rogue-hunter-2026-02-21.md  block_format.md  catalog-memory.md  checklist-project-scope-safety.md  checklist-task-completion.md  command-project-cheatsheet.md  compare-spindump-tailspin.md  config_audit_2026.md  data_schema.md  decision-2026-01-31-refactoring-discussion.md  design_spec.md  idx-home.md  implementation_guide.md  insights.md  issue-finder-ISS-002.md  issue-finder-ISS-008.md  issue-finder-ISS-009.md  issue-finder-ISS-014.md  issue-finder-ISS-015.md  issue-finder-ISS-016.md  issue-finder-ISS-017.md  (+43 more)
src/pause_monitor/: cli.py  (+18 more)
tests/: __init__.py  conftest.py  test_boottime.py  test_cli.py  test_collector.py  test_config.py  test_daemon.py  test_forensics.py  test_formatting.py  test_integration.py  test_iokit.py  test_libproc.py  test_logging.py  test_no_tiers.py  test_notifications.py  test_ringbuffer.py  test_sentinel.py  test_sleepwake.py  test_socket_client.py  test_socket_server.py  test_sparkline.py  test_storage.py  test_stress.py  test_sysctl.py  test_tier_manager.py  test_tracker.py  test_tui.py  test_tui_connection.py  test_tui_reconnect.py
(+55 files in other folders)
