[project]
name = "pause-monitor"
version = "0.1.0"
description = "Track down intermittent macOS system pauses"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "textual>=0.50",
    "rich>=13.0",
    "click>=8.0",
    "aiosqlite>=0.19",
    "structlog>=24.0",
    "tomlkit>=0.12",
]

[project.scripts]
pause-monitor = "pause_monitor.cli:main"

[project.urls]
Repository = "https://github.com/hluisi/pause-monitor"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
