[project]
name = "rogue-hunter"
version = "0.1.6"
description = "Hunt down rogue processes causing macOS system issues"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.14"
dependencies = [
    "textual>=0.50",
    "rich>=13.0",
    "click>=8.0",
    "aiosqlite>=0.19",
    "structlog>=24.0",
    "tomlkit>=0.12",
    "psutil>=5.9",
]

[project.scripts]
rogue-hunter = "rogue_hunter.cli:main"

[project.urls]
Repository = "https://github.com/hluisi/rogue-hunter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-clarity>=1.0.1",
    "pytest-icdiff>=0.9",
    "pytest-pretty>=1.3.0",
    "pytest-sugar>=1.1.1",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
